scripts/scenario-7/default-mtls-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: fast-track-istio
spec:
  mtls:
    mode: STRICT
