scripts/scenario-7/busybox-sa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-sa
  namespace: fast-track-istio
spec:
  serviceAccountName: books-viewer-sa
  containers:
    - name: busybox-sa
      image: radial/busyboxplus:curl
      command:
        - sleep
        - "3600"
      imagePullPolicy: IfNotPresent
      resources:
        limits:
          cpu: "200m"
          memory: 200Mi
        requests:
          cpu: "100m"
          memory: 100Mi
  restartPolicy: Always
