scripts/scenario-7/books-api-vs-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: books-api-gateway
  namespace: fast-track-istio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-books-api-gateway
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: books-api-vservice
  namespace: fast-track-istio
spec:
  hosts:
    - "*"
  gateways:
    - books-api-gateway
  http:
    - route:
        - destination:
            host: books-api-service
            port:
              number: 4000
---
# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#   name: ingress-policy
#   namespace: istio-system
# spec:
#   selector:
#     matchLabels:
#       app: istio-ingressgateway
#   action: DENY
#   rules:
#   - when:
#      - key: request.headers[User-Agent]
#        values: ["curl/*"]
