scripts/scenario-7/movies_gw_vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: movies-api-gateway
  namespace: fast-track-istio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-movies-api-gateway
        protocol: HTTP
      hosts:
        - movies.fast-track-istio.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: movies-api-vservice
  namespace: fast-track-istio
spec:
  hosts:
    - movies.fast-track-istio.io
  gateways:
    - movies-api-gateway
  http:
    - match:
        - headers:
            version:
              exact: "1"
      route:
        - destination:
            host: movies-api-service
            port:
              number: 3000
            subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: movies-api-vservice
  namespace: fast-track-istio
spec:
  hosts:
    - movies.fast-track-istio.io
  gateways:
    - movies-api-gateway
  http:
    - match:
        - headers:
            version:
              exact: "1"
      route:
        - destination:
            host: movies-api-service
            port:
              number: 3000
            subset: v1
